<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">夜店骰王</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_sure">确定</string>
    <string name="error_requst_quicky">请求过于频繁，休息一下！</string>
    <string name="error_network_tip">未连接到互联网，请检查网络配置。</string>
    <string name="error_network_msg">网络连接错误</string>
    <string name="init_failed">初始化失败</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="already_exit_account">已退出当前账号</string>
    <string name="please_input_username">请输入用户昵称</string>
    <string name="people_create_success">角色创建成功</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_correct_phone">请输入正确的手机号</string>
    <string name="please_input_pw">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="modify_pw_success">修改密码成功</string>
    <string name="pw_not_same">两次输入的新密码不一致</string>
    <string name="please_input_old_pw">请输入旧密码</string>
    <string name="please_input_new_pw">请输入新密码</string>
    <string name="please_input_new_pw_agin">请再次输入新密码</string>
    <string name="register_success">注册成功</string>
    <string name="twice_not_same">两次密码输入不一致</string>
    <string name="please_input_pw_agin">请再次输入密码</string>
    <string name="room_init_failed">房间信息初始化失败</string>
    <string name="number_ge">个</string>
    <string name="exit_warning">游戏正在进行中，退出将会扣除底注幸运豆%，确定要退出吗？</string>
    <string name="action_cancel">取消</string>
    <string name="action_ready">准备</string>
    <string name="action_already_ready">已准备</string>
    <string name="game_start_shake">游戏开始,请摇骰</string>
    <string name="join_game">加入了游戏</string>
    <string name="exit_game">退出游戏</string>
    <string name="action_open">开</string>
    <string name="start_gess">开始叫骰</string>
    <string name="please_input_search">请输入房间号再搜索</string>
    <string name="room_gaming_not_join">该房间正在游戏中，无法加入</string>
    <string name="game_doing">游戏中</string>
    <string name="game_holding">等待中</string>
    <string name="welcome_play">欢迎使用</string>
    <string name="socket_not_connect">socket没有连接</string>
    <string name="diss_connect">连接已断开</string>
    <string name="not_install_wx">您的手机未安装微信客户端</string>
    <string name="not_install_sina">您的手机未安装微博客户端</string>
    <string name="auth_success">授权成功</string>
    <string name="share_success">分享成功</string>
    <string name="connect_init_exception">连接初始化异常</string>
    <string name="connect_failed">连接中断</string>
    <string name="connect_exception">连接异常</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_refuse">分享被拒绝</string>
    <string name="share_return">发送返回</string>
    
    <string name="user_name_title">用户昵称：</string>
    <string name="sex_title">性别：</string>
    <string name="coin_title">幸运豆：</string>
    <string name="modify_pw">修改密码</string>
    <string name="quit_login">退出登录</string>
    <string name="user_name">用户昵称</string>
    <string name="name_input_hint">"请输入4~20个字符"</string>
    <string name="create_people">创建角色</string>
    <string name="room_num_title">房间号：</string>
    <string name="base_coin_title">底注：</string>
    <string name="your_dice_note">这个是你摇出来的骰子</string>
    <string name="personal_info">个人信息</string>
    <string name="room_num">房间号</string>
    <string name="online_count">在玩人数</string>
    <string name="room_state">游戏状态</string>
    <string name="base_coin">底注</string>
    <string name="enter_room">进入房间</string>
    <string name="quick_start">快速开始</string>
    <string name="create_room">创建房间</string>
    <string name="game_result">开罐结果</string>
    <string name="result_x">X</string>
    <string name="share_to">分享到</string>
    <string name="star_title">*</string>
    <string name="login_account">登录账号</string>
    <string name="login_phone_hint">请输入您注册时的手机号</string>
    <string name="login_pw">登录密码</string>
    <string name="login_pw_hint">请输入您的密码</string>
    <string name="remenber_pw">记住密码</string>
    <string name="register_new_account">注册新账号</string>
    <string name="login_tx">登录</string>
    <string name="old_pw">旧设密码</string>
    <string name="old_pw_hint">请输入您的旧密码</string>
    <string name="new_pw">新设密码</string>
    <string name="new_pw_hint">请您设置新登录密码</string>
    <string name="sure_pw">确认密码</string>
    <string name="sure_pw_hint">请再次输入密码</string>
    <string name="sure_modify">确认修改</string>
    <string name="coin_rmb_bili">兑换比例：</string>
    <string name="one_to_hundred">1元=100幸运豆</string>
    <string name="pay_amount">充值金额</string>
    <string name="pay_amount_hint">请输入您的充值金额（≥1元）</string>
    <string name="pay_taobao">支付宝支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="phone_num">手机号码</string>
    <string name="phone_num_hint">请输入您的手机号进行注册</string>
    <string name="please_input_pw_hint">请您设置登录密码</string>
    <string name="register_tx">注册</string>
    <string name="you_win_note">你赢啦！</string>
    <string name="you_loose_note">你输了！</string>
    <string name="follow_up_play">乘胜追击</string>
    <string name="make_persistent_play">再接再厉</string>
    <string name="congratulate_get">恭喜你获得</string>
    <string name="incaution_loose">不小心丢失</string>
    <string name="first_login_note">您今天是第一次进入游戏，赠送您%幸运豆</string>
    <string name="download_start">下载开始</string>
    <string name="download_doing">下载中</string>
    <string name="download_done">下载完成</string>
    <string name="download_failed">下载失败</string>
    
    <string name="new_version_note">有新的版本%，是否需要更新？</string>
    <string name="action_update">更新</string>
    <string name="raffle_phone_note">请输入领奖联系电话</string>
    <string name="raffle_address_note">请输入领奖收获地址</string>
    <string name="thank_for_join">谢谢参与</string>
    <string name="load_prize_failed">载入奖品列表失败</string>
    <string name="never_get_note">您还有未领取的奖品:%，确认放弃吗？</string>
    <string name="raffle_do_note">参与抽奖将扣除您的%幸运豆，是否继续？</string>
    <string name="please_done_raffle">请先完成领奖</string>
    <string name="get_prize_success_note">领奖信息已填写成功，稍后会联系并告知您。</string>
    <string name="raffle_win_note">恭喜您获得%x1</string>
    <string name="download_persent">下载进度</string>
    <string name="get_prize">领取奖品</string>
    <string name="giveup_prize">忍痛放弃</string>
    <string name="unknow_prize">神秘大奖</string>
    <string name="prize_phone">联系电话</string>
    <string name="prize_address">邮寄地址</string>
    <string name="press_get_prize">赶紧点击去领奖喽</string>
    <string name="press_coin_btn">继续抽奖</string>
    <string name="protocol_check_note">请勾选阅读夜店骰王用户协议后注册</string>
    <string name="sw_protocol">[夜店骰王用户协议]</string>
    <string name="action_read">阅读</string>
    
    <!-- 支付 -->
    <string name="please_input_money">请输入充值金额</string>
    <string name="wxversion_not_support_pay">您的微信版本不支持支付功能</string>
    <string name="money_not_less_one">充值金额不能小于1元</string>

</resources>
